# argonautica-platfrorm

./: .env.example  .env.staging.example  .env.test  .gitignore  64_ways.html  CLAUDE.md  Makefile  README.md  create_prod_users.sh  dev.sh  docker-compose.test.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260628_2344_799c88b82d58_initial_schema.py  20260629_0421_d8305ec631e1_users_auth_fields.py  20260629_0527_fb716285fe92_users_can_create_groups.py  20260630_0853_e10ce43ba1d3_avatar_and_sticker_media_refs.py  20260701_1200_a1b2c3d4e5f6_add_is_personal_to_rooms.py  20260701_1300_b2c3d4e5f6a7_add_is_news_to_rooms.py  20260702_1400_c3d4e5f6a7b8_add_kb_comments.py  20260702_1500_d4e5f6a7b8c9_media_kind_audio.py  20260703_1000_e5f6a7b8c9d0_add_forwarded_from_to_messages.py  20260703_1000_e5f6a7b8c9d0_add_journal_pardons.py  20260703_1100_f6a7b8c9d0e1_add_journal_pardons.py  20260703_1200_a7b8c9d0e1f2_add_notifications.py  20260703_1300_b8c9d0e1f2a3_add_feedback.py  20260704_1000_c9d0e1f2a3b4_add_journal_credits.py  20260704_1100_d0e1f2a3b4c5_add_faq_items.py  20260704_1200_e1f2a3b4c5d6_add_cabin_entries.py  20260705_1400_a2b3c4d5e6f7_cabin_access_and_grant_notification.py  20260705_1600_b3c4d5e6f7a8_media_thumb_key.py  20260706_1000_c4d5e6f7a8b9_add_tasks.py  20260706_1200_d5e6f7a8b9c0_add_task_media.py  20260706_2134_3fc6c4518667_add_journal_programs.py  20260709_1113_49cd1ef043ba_add_kb_items_kind.py  20260709_1417_65af0834bb94_push_subscriptions_and_admin_.py  20260709_1800_f0e1d2c3b4a5_drop_journal_missed_notifications.py  20260711_1200_d814776cf50d_add_mention_notification_kind.py  20260712_2144_a5ac607d6dee_pair_tasks.py  20260713_1203_1166b920854e_add_message_ref_kind_ref_id.py  20260718_1153_fc8d700dd3a5_add_video_transcode_columns_to_media_.py  20260718_1200_cccfebde22b1_add_user_is_observer.py  20260718_1556_890c84f56ca7_add_media_preview_key.py  (+1 more)
backend/app/: main.py
backend/scripts/: backfill_image_dims.py  backfill_media_derivatives.py  backfill_thumbnails.py  backfill_video_posters.py  create_users.py  telegram_bot.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_backfill_media_derivatives.py  test_cabin.py  test_calendar.py  test_dynamics.py  test_health.py  test_journal_structure.py  test_kb.py  test_media.py  test_message_refs.py  test_messages.py  test_metrics.py  test_notifications.py  test_observer.py  test_pair_tasks.py  test_pins.py  test_profile.py  test_push.py  test_ratelimit.py  test_rooms_create.py  test_rooms_delete.py  test_rooms_members.py  test_stickers.py  test_stream_tasks.py  test_tasks.py  test_transcode.py  test_ws.py
docker/: backup.sh  (+5 more)
(+485 files in other folders)
