[project]
name = "platform-backend"
version = "0.1.0"
description = "FastAPI backend: REST + WebSocket для платформы"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis",
    "pydantic-settings",
    "pyjwt",
    "argon2-cffi",
    "python-multipart",
    "boto3",            # S3-клиент для MinIO (и будущего managed-S3)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

# Версии не запинены сознательно — зафиксировать при первой установке
# (pip install -e ".[dev]" затем pip freeze, или uv lock).
