[project]
name = "platform-backend"
version = "0.1.0"
description = "FastAPI backend: REST + WebSocket для платформы"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "redis",
    "pydantic-settings",
    "pyjwt",
    "argon2-cffi",
    "python-multipart",
    "boto3",            # S3-клиент для MinIO (и будущего managed-S3)
    "telethon",         # MTProto-клиент для telegram-бота (через MTProxy) — scripts/telegram_bot.py
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Пакет приложения — только `app/`. `alembic/` и `tests/` не упаковываем.
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "httpx-ws",          # тестирование WebSocket поверх ASGITransport
    "ruff",
    "mypy",
]

# Версии не запинены сознательно — зафиксировать при первой установке
# (pip install -e ".[dev]" затем pip freeze, или uv lock).

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Автогенерируемые миграции: длинные строки из имён FK-constraint — не переносим.
"alembic/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# boto3/botocore не поставляют типовые стабы (py.typed). Полные стабы (boto3-stubs)
# тяжёлые и для пары вызовов presigned-URL избыточны — игнорируем импорт.
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

# Telethon не поставляет типовые стабы (py.typed) — игнорируем импорт (бот вне strict).
[[tool.mypy.overrides]]
module = ["telethon", "telethon.*"]
ignore_missing_imports = true
